# RPA-Everything

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.zh-CN.md  README.md  README.zh-CN.md  SECURITY.md  config.yaml.example  mcp_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/: pull_request_template.md
assets/: README.md
connectors/: __init__.py  feishu.py  http.py
core/: __init__.py  agent.py  android.py  android_profile.py  artifacts.py  browser.py  capabilities.py  config.py  desktop.py  human.py  intercept.py  ios.py  llm.py  logger.py  notify.py  redact.py  secrets.py  skills.py  tools.py  verify.py
docs/: BACKLOG.md  CAPABILITY-PROOF.md  agent-bootstrap.zh-CN.md  external-action-confirmation.zh-CN.md  first-use.md  first-use.zh-CN.md  skill-review.md  skill-review.zh-CN.md  supervised-run.zh-CN.md  workflow-template.zh-CN.md
evals/: cases.json  run.py
harness/: agent.py  demo.py  doctor.py  replay.py  routes.py  runs.py  runtime.py  solidify.py  supervise.py  trace.py
showcase/: README.md
skills/: README.md  feishu_project_daily.py
sops/: README.md
tests/: conftest.py  test_agent_loop.py  test_android.py  test_android_smoke.py  test_artifacts_human.py  test_browser.py  test_capabilities.py  test_config.py  test_demo.py  test_desktop.py  test_docs_drift.py  test_doctor.py  test_evals.py  test_feishu_parser.py  test_feishu_send.py  test_harness_plan.py  test_intercept.py  test_ios.py  test_logger.py  test_mcp_server.py  test_redact.py  test_routes.py  test_runs.py  (+6 more)
(+67 files in other folders)
